objects/SLSI__Page__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Id__c</fullName>
        <label>Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLSI__LayoutType__c</fullName>
        <label>LayoutType</label>
        <picklist>
            <picklistValues>
                <fullName>3 Column Layout Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Column Layout Right Main Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Column Layout Left Main Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Column Layout Half Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Column Layout Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLSI__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Target_Console__c</fullName>
        <label>Target Console</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SLSI__Unique_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF( LOWER(VLOOKUP($ObjectType.SLSI__Page__c.Fields.Name ,$ObjectType.SLSI__Page__c.Fields.Name , Name)) = LOWER(Name) &amp;&amp; (ISCHANGED(Name) || ISNEW()) , true, false
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Page Name must be unique</errorMessage>
    </validationRules>
</CustomObject>